--- a/text.html
+++ b/text.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homework2</title>
+  <link rel="stylesheet" href="text.css">
 </head>
 <body>
   <h1>
@@ -42,16 +43,7 @@
   </p> -->
 
 </body>
-<style>
-  h1{
-    color: rgb(180, 50, 231);
-    margin: 170px;
-  }
-
-  button{
-    color: rgb(0, 0, 0);
-  }
-</style>
+<style></style>
 <script src="text.js"></script>
 
 </html>
